# palettelib

./: .gitignore  Pipfile  README.md  pyproject.toml
formats/: format_ase.py  format_gpl.py  format_kpl.py  format_yaml.py
palette/: color.py  format.py  palette.py
palettelib/: color.py  io.py  palette.py  palette.schema.json  util.py
palettelib/affinity/: container.py
palettelib/format/: format_aco.py  format_act.py  format_ase.py  format_gpl.py  format_kpl.py  format_yaml.py
test/: convert.py
test/resources/: Bears.gpl  example.ase  germany.palette.yaml  lakelife.kpl  material-illustrator.ase  youtube.palette.yaml
